<resources>
    <string name="app_name">Talky</string>
    <string name="icon">Icon</string>
    <string name="talky">Talky.</string>
    <string name="go_to_sign_up_page">Go to Sign Up Page</string>
    <string name="cont">Press to Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_with_phone_number">Sign in with Phone Number</string>
    <string name="next">Next</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent_to">Enter the OTP sent to </string>
    <string name="otp_hint">______</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="instant_validation">(instant validation)</string>
    <string name="profile">Setup Profile</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="complete">Complete</string>
    <string name="please_provide_your_info">Please provide your name, about and an optional profile photo</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="settings">Settings</string>
    <string name="like_message">like message</string>
    <string name="emoji">emoji</string>
    <string name="type_your_message">Type your message</string>
    <string name="send_message_action">send message action</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>