<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_chat"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/backgroundWhite">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:adjustViewBounds="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_round_arrow_back_ios_24"
            app:tint="@color/primaryBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_chat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primaryBlack"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sanidhya" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_chat_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/default_avatar"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/input_box"
        android:layout_below="@+id/toolbar_chat">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="ifContentScrolls"
            tools:itemCount="12"
            tools:listitem="@layout/list_item_chat_sent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/input_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@id/btn_send"
            app:cardCornerRadius="26dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_emoji"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_chat_icons_smile"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/emoji" />

                <com.vanniktech.emoji.EmojiEditText
                    android:id="@+id/et_type_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/btn_emoji"
                    android:background="@android:color/white"
                    android:gravity="top|start"
                    android:hint="@string/type_your_message"
                    android:imeOptions="actionGo"
                    android:inputType="textMultiLine|textCapSentences|textLongMessage|text"
                    android:lineSpacingExtra="6dp"
                    android:maxHeight="120dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:singleLine="false"
                    android:textSize="16sp"
                    tools:text="Hey, my name is Sanidhya." />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/btn_send"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_send_message"
            android:contentDescription="@string/send_message_action"
            android:elevation="2dp"/>
    </RelativeLayout>

</RelativeLayout>